--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MealPlanner Pro</title>
+    <title>Design&Dine</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <!-- Header Section -->
     <header>
-        <h1>MealPlanner Pro</h1>
+        <h1>Design&Dine</h1>
         <p>Your personalized meal planning solution!</p>
     </header>
 
