--- a/generate_meal_plan.html
+++ b/generate_meal_plan.html
@@ -6,7 +6,275 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generate Meal Plan</title>
     <style>
-        /* Add your existing styles here */
+         /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color:  #e4d426;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            width: 80%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Header */
+        header {
+            background-color: #ffffff; /* Modern purple background */
+            color:#e4d426;
+            text-align: center;
+            padding: 60px 0;
+        }
+
+        header h1 {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 3rem;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.5rem; /* Increased font size */
+            font-weight: bold; /* Made text bold */
+            margin-bottom: 20px; /* Added more space below the paragraph */
+        }
+
+
+        /* Main Content */
+        main {
+            padding: 40px 0;
+        }
+
+        h2 {
+            color:  #e4d426;
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+
+        /* Buttons Section */
+        #feature-buttons {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .feature-button {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .feature-button:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
+        }
+
+        .feature-button h3 {
+            font-size: 1.6rem;
+            color: #0d0d0e;
+            margin-bottom: 15px;
+        }
+
+        .feature-button p {
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 20px;
+        }
+
+        .feature-button a {
+            background-color: #e4d426;
+            color: white;
+            padding: 12px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.1rem;
+            transition: background-color 0.3s ease;
+        }
+
+        .feature-button a:hover {
+            background-color: #e4d426;
+        }
+
+        #meal-plan-form {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 40px;
+        }
+
+        #meal-plan-form form {
+            display: grid;
+            grid-gap: 15px;
+        }
+
+        #meal-plan-form label {
+            font-size: 1.1rem;
+        }
+
+        #meal-plan-form input {
+            padding: 10px;
+            font-size: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        #meal-plan-form button {
+            background-color: #e4d426;
+            color: white;
+            font-size: 1.2rem;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #meal-plan-form button:hover {
+            background-color: #e4d426;
+        }
+
+        #meal-plan-results {
+            margin-top: 30px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .meal-card {
+            flex: 1 1 calc(33.33% - 20px);
+            background-color: white;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .meal-card img {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        .meal-card h3 {
+            color: #6a4c9c;
+            margin-bottom: 10px;
+        }
+
+        .meal-card a {
+            display: inline-block;
+            margin-top: 10px;
+            background-color: #6a4c9c;
+            color: white;
+            padding: 8px 12px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .meal-card a:hover {
+            background-color:  #e4d426;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        footer a {
+            color: #f1f1f1;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+
+        .top-nav {
+    background-color: white;
+    border-bottom: 1px solid #e4d426;
+    padding: 10px 0;
+    position: sticky; /* Makes it stick to the top */
+    top: 0;
+    z-index: 1000;  
+    }
+
+    .nav-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
+    .logo {
+        height: 50px; /* Adjust as needed */
+        margin-right: 20px;
+    }
+
+    nav a {
+        color:  #e4d426; /* Modern purple */
+        text-decoration: none;
+        font-size: 1rem;
+        font-weight: bold;
+        margin: 0 15px;
+        padding: 8px 12px;
+        border-radius: 4px;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    nav a:hover {
+        background-color: #e7e4ec;
+        color: white;
+    }
+
+
+        .kiwi {
+        width: 100%; /* Match the width of the container */
+        height: 300px; /* Adjust height as needed */
+        object-fit: cover; /* Ensure the image is cropped to fit the area */
+        object-position: center; /* Center the image horizontally */
+        display: block; /* Ensures no extra spaces appear around the image */
+        }
+
+        .learn-more-btn {
+            display: inline-block;
+            background-color: rgb(105, 170, 62); /* Updated button background color */
+            color:  #e4d426; /* Updated button text color */
+            font-size: 1.2rem; /* Made button text bigger */
+            font-weight: bold; /* Made button text bold */
+            padding: 15px 30px; /* Increased button padding */
+            border: none;
+            border-radius: 10px; /* Slightly curved corners */
+            text-decoration: none; /* Removed underline */
+            cursor: pointer; /* Pointer cursor */
+            margin-top: 20px; /* Added margin to move the button down */
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transitions */
+        }
+
+    .learn-more-btn:hover {
+        background-color: #333; /* Darker shade on hover */
+        color: white; /* Change text color on hover */
+        transform: translateY(-5px); /* Slight hover effect */
+    }
     </style>
 </head>
 <body>
