--- a/generate_meal_plan.html
+++ b/generate_meal_plan.html
@@ -41,6 +41,7 @@
             font-size: 3rem;
             text-transform: uppercase;
             margin-bottom: 10px;
+            color: rgb(105, 170, 62); 
         }
 
         header p {
