--- a/register.html
+++ b/register.html
@@ -1,3 +1,4 @@
+<!-- Registration Form -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,13 +8,11 @@
 </head>
 <body>
     <h2>Register</h2>
-    <form action="register.php" method="POST">
+    <form method="POST" action="register.php">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br><br>
+        <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br><br>
+        <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Register</button>
     </form>
 </body>
