--- a/index.html
+++ b/index.html
@@ -320,7 +320,14 @@
             </section>
         </div>
     </main>
-
+    <!-- Login/Register Section -->
+    <div style="background-color: #333; color: white; text-align: center; padding: 20px;">
+        <p>
+            <a href="login.html" style="color: #e4d426; text-decoration: none; font-weight: bold; margin-right: 15px;">Login</a>
+            |
+            <a href="register.html" style="color: #e4d426; text-decoration: none; font-weight: bold; margin-left: 15px;">Register</a>
+        </p>
+    </div>
     <!-- Footer Section -->
     <footer>
         <div class="container">
