--- a/register.html
+++ b/register.html
@@ -54,6 +54,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             min-height: 70vh;
         }
 
@@ -64,6 +65,7 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 400px;
+            margin-bottom: 30px;
         }
 
         .register-box h2 {
@@ -105,6 +107,21 @@
         button:hover {
             background-color: #333;
             color: white;
+        }
+
+        .terms {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .terms input {
+            margin-right: 10px;
+        }
+
+        .terms label {
+            font-size: 0.9rem;
+            font-weight: normal;
         }
 
         /* Footer */
@@ -164,8 +181,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <p>Your go-to solution for personalized features</p>
+        <h1>Welcome to Design&Dine</h1>
+        <p>Your go-to solution for personalized meal planning & grocery shopping</p>
     </header>
     <div class="top-nav">
         <div class="nav-container">
@@ -179,11 +196,15 @@
     <div class="register-container">
         <div class="register-box">
             <h2>Register</h2>
-            <form method="POST" action="register.php">
+            <form method="POST" action="register.php" id="registrationForm">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
+                <div class="terms">
+                    <input type="checkbox" id="agree" name="agree" required>
+                    <label for="agree">Subscribe now to get unlimited meal plans and more for just $8 a month. I agree to the <a href="terms.html" target="_blank">Terms of Service</a> and <a href="privacy.html" target="_blank">Privacy Policy</a>.</label>
+                </div>
                 <button type="submit">Register</button>
             </form>
         </div>
@@ -193,4 +214,3 @@
     </footer>
 </body>
 </html>
-
