--- a/gen.html
+++ b/gen.html
@@ -205,68 +205,68 @@
 
     <script>
         document.getElementById("meal-form").addEventListener("submit", async function (event) {
-            event.preventDefault(); // Prevent form reload
+        event.preventDefault(); // Prevent form reload
 
-            const preferences = document.getElementById("preferences").value;
-            const calories = document.getElementById("calories").value;
-            const budget = document.getElementById("budget").value;
+        const preferences = document.getElementById("preferences").value;
+        const calories = document.getElementById("calories").value;
+        const budget = document.getElementById("budget").value;
 
-            try {
-                const response = await fetch("gen.php", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/x-www-form-urlencoded" },
-                    body: `preferences=${encodeURIComponent(
-                        preferences
-                    )}&calories=${calories}&budget=${budget}`,
-                });
+        try {
+            const response = await fetch("gen.php", {
+                method: "POST",
+                headers: { "Content-Type": "application/x-www-form-urlencoded" },
+                body: `preferences=${encodeURIComponent(preferences)}&calories=${calories}&budget=${budget}`,
+            });
 
-                const data = await response.json();
-                const resultsDiv = document.getElementById("meal-plan-results");
+            const data = await response.json();
+            const resultsDiv = document.getElementById("meal-plan-results");
 
-                resultsDiv.innerHTML = "";
+            resultsDiv.innerHTML = "";
 
-                if (data.success) {
-                    const mealPlan = data.mealPlan;
-                    for (const [day, meals] of Object.entries(mealPlan)) {
-                        const daySection = document.createElement("div");
-                        daySection.classList.add("day-meal-plan");
-                        daySection.innerHTML = `<h3>${day}</h3>`;
+            if (data.success) {
+                const mealPlan = data.mealPlan;
+                for (const [day, meals] of Object.entries(mealPlan)) {
+                    const daySection = document.createElement("div");
+                    daySection.classList.add("day-meal-plan");
+                    daySection.innerHTML = `<h3>${day}</h3>`;
 
-                        for (const [mealType, mealData] of Object.entries(meals)) {
-                            const mealCard = document.createElement("div");
-                            mealCard.classList.add("meal-card");
-                            mealCard.innerHTML = `
-                                <img src="${mealData.image}" alt="${mealData.title}" />
-                                <div>
-                                    <h4>${mealType.charAt(0).toUpperCase() + mealType.slice(1)}: ${
-                                mealData.title
-                            }</h4>
-                                    <p>Calories: ${mealData.calories}</p>
-                                    <p>Cost: $${mealData.cost}</p>
-                                    <a href="${mealData.link}" target="_blank">View Recipe</a>
-                                </div>
-                            `;
-                            daySection.appendChild(mealCard);
-                        }
+                    for (const [mealType, mealData] of Object.entries(meals)) {
+                        const mealCard = document.createElement("div");
+                        mealCard.classList.add("meal-card");
 
-                        resultsDiv.appendChild(daySection);
+                        // Construct the recipe link with the recipe ID
+                        const recipeLink = `recipes.html?id=${mealData.id}`;
+
+                        mealCard.innerHTML = `
+                            <img src="${mealData.image}" alt="${mealData.title}" />
+                            <div>
+                                <h4>${mealType.charAt(0).toUpperCase() + mealType.slice(1)}: ${mealData.title}</h4>
+                                <p>Calories: ${mealData.calories}</p>
+                                <p>Cost: $${mealData.cost}</p>
+                                <a href="${recipeLink}" target="_blank">View Recipe</a>
+                            </div>
+                        `;
+                        daySection.appendChild(mealCard);
                     }
 
-                    // Add Save Meal Plan button
-                    const saveButton = document.createElement("button");
-                    saveButton.id = "save-button";
-                    saveButton.textContent = "Save Meal Plan";
-                    saveButton.addEventListener("click", () => {
-                        alert("Meal plan saved! Logic for saving will go here.");
-                    });
-                    resultsDiv.appendChild(saveButton);
-                } else {
-                    resultsDiv.innerHTML = "<p>Could not generate meal plan. Try again!</p>";
+                    resultsDiv.appendChild(daySection);
                 }
-            } catch (error) {
-                console.error("Error fetching meal plan:", error);
+
+                // Add Save Meal Plan button
+                const saveButton = document.createElement("button");
+                saveButton.id = "save-button";
+                saveButton.textContent = "Save Meal Plan";
+                saveButton.addEventListener("click", () => {
+                    alert("Meal plan saved! Logic for saving will go here.");
+                });
+                resultsDiv.appendChild(saveButton);
+            } else {
+                resultsDiv.innerHTML = "<p>Could not generate meal plan. Try again!</p>";
             }
-        });
+        } catch (error) {
+            console.error("Error fetching meal plan:", error);
+        }
+    });
     </script>
 </body>
 </html>
