--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             <nav>
                 <a href="generate_meal_plan.html">PLANNING</a>
-                <a href="saved_meal_plans.html">SAVED PLANS</a>
+                <a href="meal_plans.html">SAVED PLANS</a>
             </nav>
         </div>
     </div>
@@ -157,7 +157,7 @@
                 <div class="feature-button">
                     <h3>Saved Meal Plans</h3>
                     <p>View and manage your saved meal plans to keep your lifestyle on track.</p>
-                    <a href="saved_meal_plans.html">View Saved Plans</a>
+                    <a href="meal_plans.html">View Saved Plans</a>
                 </div>
             </section>
         </div>
