--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <nav>
                 <a href="generate_meal_plan.html">PLANNING</a>
                 <a href="meal_plans.html">SAVED PLANS</a>
+                <a href="about.html">ABOUT</a>
             </nav>
         </div>
     </div>
@@ -158,6 +159,11 @@
                     <h3>Saved Meal Plans</h3>
                     <p>View and manage your saved meal plans to keep your lifestyle on track.</p>
                     <a href="meal_plans.html">View Saved Plans</a>
+                </div>
+                <div class="feature-button">
+                    <h3>About</h3>
+                    <p>Learn more about Design&Dine and our mission to make healthy eating simple and accessible.</p>
+                    <a href="about.html">Learn More</a>
                 </div>
             </section>
         </div>
